--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Birds -- Juvenile literature'
 - !lcc 'QL'
+- GITenberg
 tableOfContents: Birds from a city roof -- The hunting of the woodchuck -- Three sermons
   -- The marsh -- Calico and the kittens -- The sparrow roost -- "Mux" -- Racoon Creek
   -- The dragon of the swale.
